--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,8 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-shortcircuits
-shortcliffords
-
 [project]
-name = "shortcircuits"
+name = "htstabilizer"
 version = "1.0.0"
 description = "Hardware-tailored quantum Clifford circuits for stabilizer state preparation or readout as well as mutually unbiased bases in order to perform efficient full-state tomography on small qubit systems."
 readme = "README.md"
