--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ classifiers = [
 ]
 keywords = ["quantum circuits", "clifford", "hardware-tailored", "full-state tomography", "stabilizer", "quantum state preparation", "quantum readout circuits", "mutually unbiased bases", "short circuits", "full state tomography", "circuit optimization"]
 dependencies = [
-    "qiskit",
-    "numpy"
+    "qiskit >= 0.39",
+    "numpy >= 1.22"
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/Mc-Zen/shortcircuits"
-"Bug Tracker" = "https://github.com/Mc-Zen/shortcircuits/issues"
+"Homepage" = "https://github.com/Mc-Zen/htstabilizer"
+"Bug Tracker" = "https://github.com/Mc-Zen/htstabilizer/issues"
