--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         # pip install .
-        pip install numpy==1.22
+        pip install numpy>=1.22
         pip install qiskit==0.45.0
         pip install qiskit-aer==0.12.1
     - name: Test with unittest
