--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ dependencies = [
 "Bug Tracker" = "https://github.com/Mc-Zen/htstabilizer/issues"
 
 [tool.setuptools]
-py-modules = []
+packages = ["htstabilizer"]
